--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -9,12 +9,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      upload_url: ${{ steps.step_upload_url.outputs.upload_url }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Build Client Install
         run: |
           ./buildclient.sh 1.18
+
       - name: Create Release
         uses: actions/create-release@v1
         env:
@@ -24,6 +28,7 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
+
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
