--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -9,8 +9,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    outputs:
-      upload_url: ${{ steps.step_upload_url.outputs.upload_url }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -20,6 +18,7 @@ jobs:
           ./buildclient.sh 1.18
 
       - name: Create Release
+        id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
