--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -43,6 +43,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ needs.release.outputs.upload_url }}
-          asset_path: ./release/${{ matrix.version }}/${{ matrix.version }}-thecycle.keligrubb.com.zip
-          asset_name: ${{ matrix.version }}-thecycle.keligrubb.com.zip
+          asset_path: ./release/${{ github.ref }}/${{ matrix.version }}-${{ github.ref }}-thecycle.keligrubb.com.zip
+          asset_name: ${{ matrix.version }}-${{ github.ref }}-thecycle.keligrubb.com.zip
           asset_content_type: application/zip
