--- a/1.19/src/server.properties
+++ b/1.19/src/server.properties
@@ -21,7 +21,7 @@ level-name=world
 max-players=60
 max-tick-time=60000
 max-world-size=29999984
-motd=Break The Cycle.
+motd=Welcome to the world of Azara.
 network-compression-threshold=256
 online-mode=true
 op-permission-level=4
